--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
   <link rel="shortcut icon" href="{{ site.baseurl }}assets/favicon.ico" type="image/x-icon" />
 
   <!-- Font -->
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+  <!-- link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css' -->
 
   <!-- Feed -->
   <link rel="alternate" type="application/rss+xml" href="{{ site.feedburnerurl }}">
@@ -33,12 +33,12 @@
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css?v=3" type="text/css" />
 
   <!-- jQuery -->
-  <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
+  <script type='text/javascript' src='{{ site.baseurl }}assets/js/jquery-1.4.4.min.js'></script>
 
   <!-- Syntax Highlight -->
-  <link rel="stylesheet" type="text/css" href="http://media.zenorocha.com/pretiffy.css" />
-  <script src="http://media.zenorocha.com/pretiffy.js"></script>
-  <script src="http://media.zenorocha.com/pretiffy-lang-css.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}assets/css/pretiffy.css" />
+  <script src="{{ site.baseurl }}assets/js/pretiffy.js"></script>
+  <script src="{{ site.baseurl }}assets/js/pretiffy-lang-css.js"></script>
 
   <!-- Main -->
   <script src='{{ site.baseurl }}assets/js/main.js'></script>
