Add the category link and page. Add continue reading in the very first post.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,6 +14,7 @@
     <li><a href="{{ site.baseurl }}talks">Talks</a></li>
     <li><a href="{{ site.baseurl }}projects-full">Projects</a></li>
     <li><a href="{{ site.baseurl }}experiences">Experiences</a></li>
+    <li><a href="{{ site.baseurl }}category">Category</a></li>
   </ul>
 
 </div> <!--/masthead-->
