Add code style css into the repo.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css?v=3" type="text/css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/code.css" type="text/css" />
 
   <!-- jQuery -->
   <script type='text/javascript' src='{{ site.baseurl }}assets/js/jquery-1.4.4.min.js'></script>
