Include code.css in header.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -83,6 +83,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/normalize.css" type="text/css" />
   <link rel="stylesheet" href="{{ site.baseurl }}assets/css/main.css?v=3" type="text/css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}assets/css/code.css" type="text/css" />
 
   <!-- jQuery -->
   <script type='text/javascript' src='{{ site.baseurl }}assets/js/jquery-1.4.4.min.js'></script>
@@ -100,4 +101,3 @@
 
 </head>
 <body{% if page.class %} class="{{ page.class }}"{% endif %} onload="prettyPrint()">
->>>>>>> 1521eb04cbe837202eeed41b8209ab2c3c0bc4b5
